--- a/svelte/package.json
+++ b/svelte/package.json
@@ -6,16 +6,25 @@
   "license": "MIT",
   "scripts": {
     "dev": "concurrently 'node esbuild.js dev' 'cd ../electron/ && yarn run dev'",
+    "lint": "eslint ./src --ext .js,.ts,.svelte --fix",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "buildlinux": "node esbuild.js prod && cd ../electron/ && yarn run buildlinux",
     "buildwindows": "node esbuild.js prod && cd ../electron/ && yarn run buildwindows"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^2.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "concurrently": "^6.2.1",
     "electron": "^13.2.2",
     "esbuild": "^0.12.23",
     "esbuild-svelte": "^0.5.4",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-svelte3": "^3.2.0",
     "svelte": "^3.0.0",
     "svelte-check": "^2.2.5",
     "svelte-preprocess": "^4.8.0",
