TypeScript for Electron files

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /svelte/node_modules/
 /svelte/public/build/
 /electron/node_modules/
+/electron/*.js
 /electron/public/bundle.js
 /electron/public/bundle.css
 yarn.lock
