add missing eslintrc

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /svelte/public/build/
 /electron/node_modules/
 /electron/*.js
+!/electron/.*.js
 /electron/public/bundle.js
 /electron/public/bundle.css
 yarn.lock
