--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /svelte/public/build/
 /electron/node_modules/
 /electron/*.js
-!/electron/.*.js
+!/electron/esbuild.js
 /electron/public/bundle.js
 /electron/public/bundle.css
 yarn.lock
