--- a/electron/package.json
+++ b/electron/package.json
@@ -15,6 +15,7 @@
       "**/*",
       "!.eslintrc.js",
       "!tsconfig.json",
+      "!esbuild.js",
       "!**/node_modules/*/{CHANGELOG.md,README.md,README,readme.md,readme}",
       "!**/node_modules/*/{test,__tests__,tests,powered-test,example,examples}",
       "!**/node_modules/*.d.ts",
@@ -47,10 +48,10 @@
     }
   },
   "scripts": {
-    "dev": "tsc && ELECTRON_MODE=dev electron .",
+    "dev": "node esbuild dev && ELECTRON_MODE=dev electron .",
     "lint": "eslint . --ext .ts --fix",
-    "buildlinux": "tsc && electron-builder -l --x64",
-    "buildwindows": "tsc && electron-builder -w --x64"
+    "buildlinux": "node esbuild prod && electron-builder -l --x64",
+    "buildwindows": "node esbuild prod && electron-builder -w --x64"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.31.2",
@@ -58,6 +59,7 @@
     "electron": "^13.1.6",
     "electron-builder": "^22.11.7",
     "electron-reloader": "^1.2.1",
+    "esbuild": "^0.12.29",
     "eslint": "^7.32.0",
     "typescript": "^4.4.3"
   }
