remove console.* and better linter

--- a/svelte/package.json
+++ b/svelte/package.json
@@ -5,8 +5,8 @@
   "author": "@JeffProd",
   "license": "MIT",
   "scripts": {
-    "dev": "concurrently 'node esbuild.js dev' 'cd ../electron/ && yarn run dev'",
-    "lint": "eslint ./src --ext .js,.ts,.svelte --fix && cd ../electron && yarn run lint",
+    "dev": "node esbuild dev && cd ../electron && node esbuild dev && cd ../svelte && concurrently 'node esbuild.js watch' 'cd ../electron/ && yarn run dev'",
+    "lint": "yarn run check && eslint ./src --ext .ts,.svelte --fix && cd ../electron && yarn run lint",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "buildlinux": "node esbuild.js prod && cd ../electron/ && yarn run buildlinux",
     "buildwindows": "node esbuild.js prod && cd ../electron/ && yarn run buildwindows"
